# videocut

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json
.claude/commands/: audit.md  backend-review.md  phase.md  test-all.md  ui-review.md
.claude/skills/ffmpeg-patterns/: SKILL.md
.claude/skills/stripe-integration/: SKILL.md
apps/processor/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/processor/src/: main.py
apps/processor/src/api/: dependencies.py  routes.py
apps/processor/src/config/: settings.py
apps/processor/src/models/: job.py
apps/processor/src/services/: ass_generator.py  cut_planner.py  ffmpeg.py  filler_detector.py  safe_zones.py  smart_crop.py  speed_controller.py  supabase_client.py  transcription.py  vad.py
apps/processor/src/workers/: process_video.py  worker_settings.py
apps/processor/tests/: conftest.py  test_ass_generator.py  test_cut_planner.py  test_ffmpeg.py  test_filler_detector.py  test_health.py  test_models.py  test_routes.py  test_safe_zones.py  test_smart_crop.py  test_speed_controller.py  test_worker.py
apps/web/: package.json  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/hooks/: use-job-status.ts  use-upload.ts
docs/: api-spec.md  architecture.md  auth.md  database-schema.md  processing-pipeline.md
supabase/: config.toml
supabase/migrations/: 20260317000000_initial_schema.sql  20260318000000_phase6_preview_download.sql
tasks/: lessons.md  todo.md
tasks/plans/: master-plan.md  phase-0-setup.md
(+84 files in other folders)
