[project]
name = "videocut-processor"
version = "0.1.0"
description = "VideoCut video processing service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "arq>=0.26",
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "supabase>=2.11",
    "httpx>=0.28",
    "faster-whisper>=1.1.0",
    "silero-vad>=5.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
